# detour

./: README.md
detour_project/: pyproject.toml
detour_project/detour/: __main__.py  clustering.py  detour.py  features.py  road.py  roadgeometry.py  treeutils.py
detour_project/examples/standalone/: example_as_a_standalone_prioritization.py  example_as_a_standalone_selection.py  example_executed.json  example_not_executed.json
docs/: detour.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: detour.rst.txt  index.rst.txt  modules.rst.txt
uml/: uml.md
