[tool.poetry]
name = "detour"
version = "1.0"
description = "DETOUR a tool for selecting/prioratizing tests for automated driving systems"
authors = ["Paolo Arcaini <arcaini@nii.ac.jp>", "Ahmet Cetinkaya <ahmet@shibaura-it.ac.jp>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.14"
numpy = "^1.21.6"
matplotlib = "^3.5"
scipy = "^1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
detour = 'detour.__main__:main'
